--- a/index.html
+++ b/index.html
@@ -1,68 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Portfolio</title>
-    <link type="text/css" href="./style.css" rel="stylesheet" />
-    <link
-      href="https://bit.ly/3rVAh0c"
-      rel="stylesheet"
-    />
-    <script src="https://bit.ly/31Sp85f"></script>
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <title>Portfolio</title>
+  <link type="text/css" href="./style.css" rel="stylesheet" />
+  <link href="https://bit.ly/3rVAh0c" rel="stylesheet" />
+  <script src="https://bit.ly/31Sp85f"></script>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <link href="https://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
+  <script src="./index.js"></script>
+</head>
 <body>
   <nav class="navbar">
     <div id="left"></div>
     <div id="right"></div>
     <div id="top"></div>
     <div id="bottom"></div>
-      <li class = "nav-item">
-        <a href="./index.html" >Home |</a>
-      </li>
-      <li class = "nav-item">
-        <a href="./portfolio.html" >Portfolio</a>
-      </li>
+    <li class="nav-item">
+      <a href="./index.html">Home |</a>
+    </li>
+    <li class="nav-item">
+      <a href="./portfolio.html">Portfolio</a>
+    </li>
     </ul>
   </nav>
+ 
+
   <div class="band_bio">
     <div class="section">
       <div class="content">
+        <div class="title">
+          <span class="bio-text">
+
+            <div id="holder" class="text tt-holder">
+              <p class="tt"><i>     </i>    <code id="hello">Hello...</code></p>
+              <p class="tt"><i>     </i>   <code id="hola">Hola...</code></p>
+              <p class="tt"><i>     </i>   <code id="privet">Privet...</code></p>
+              <p class="tt"><i>     </i>   <code id="konnichiwa">Kon'nichiwa...</code></p>
+
+
+              <h1 class="ttt"></h1>
+            </div>
+
+
+
+
+          </span>
+          <div class="title_inner">About Me</div>
+          <div class="item-1">
+            <a class="card_bio">
+              <div class="thumb-1" style="background-image: url(https://i.ibb.co/7jzBKtN/portfolio-background.jpg);">
+              </div>
+              <article>
+                <p><span class="bio-text">Name: </span>Sandy Vasquez</p>
+                <p><span class="bio-text">Bio:</span> I am a customer-focused professional in the Technology industry.
+                  And a coding Bootcamp graduate. My background in Computer Networking gives me the range to bridge the
+                  gap between code and IT infrastructure <br>
+                <p><span class="bio-text">Interests:</span> Philosophy, cryptocurrency, cyber security
+              </article>
+            </a>
+          </div>
+          <br>
           <div class="title">
-            <span class="bio-text"><h1>Hello...</h1></span> 
-            <div class="title_inner">About Me</div>
-    <div class="item-1">
-    <a class="card_bio">
-      <div class="thumb-1" style="background-image: url(https://i.ibb.co/7jzBKtN/portfolio-background.jpg);"></div>
-      <article>
-      <p><span class="bio-text">Name: </span>Sandy Vasquez</p>
-      <p><span class="bio-text">Bio:</span> I am a customer-focused professional in the Technology industry. And a coding Bootcamp graduate. My background in Computer Networking gives me the range to bridge the gap between code and IT infrastructure <br>
-      <p><span class="bio-text">Interests:</span> Philosophy, cryptocurrency, cyber security
-      </article>
-    </a>
-  </div>
-       <br> 
-          <div class="title"> 
             <div class="title_inner">Experience</div>
           </div>
-          <a 
-            href="https://bit.ly/3EJsxlK"
-            download >Download Resume</a>
+          <a href="https://bit.ly/3EJsxlK" download>Download Resume</a>
+        </div>
       </div>
     </div>
   </div>
   </div>
-</div>
-<footer class="footer">
-  <p class="p-footer">
-    <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:linkedin-icon" id="iconify-inline-linkedin"></span></a>
-    <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:google-gmail"></span></a>
-    <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:twitter" id="iconify-inline-twitter"></span></a>
-  </p>
-© 2021 Sandy Vasquez - powered by Heroku
-</footer>
+  <script>
+    const vis = (function () {
+      let stateKey,
+        eventKey,
+        keys = {
+          hidden: "visibilitychange",
+          webkitHidden: "webkitvisibilitychange",
+          mozHidden: "mozvisibilitychange",
+          msHidden: "msvisibilitychange"
+        };
+      for (stateKey in keys) {
+        if (stateKey in document) {
+          eventKey = keys[stateKey];
+          break;
+        }
+      }
+      return function (c) {
+        if (c) document.addEventListener(eventKey, c);
+        return !document[stateKey];
+      }
+    })();
+    $(document).ready(function () {
+      // main visibility API function
+      // check if current tab is active or not
+
+      let animatetext = function () {
+        let $elements = $(".tt-holder .tt");
+        $(".ttt").tickerText($elements, 8, 3, 30, 1, 0.5, 2, false, "timerpause", "timerstop");
+      }
+      $(animatetext);
+    });
+  </script>
+  <footer class="footer">
+    <p class="p-footer">
+      <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:linkedin-icon"
+          id="iconify-inline-linkedin"></span></a>
+      <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline"
+          data-icon="logos:google-gmail"></span></a>
+      <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:twitter"
+          id="iconify-inline-twitter"></span></a>
+    </p>
+    © 2021 Sandy Vasquez - powered by Heroku
+  </footer>
 </body>
 <html>
-
-
-
